# ecommerce-api-update

./: .editorconfig  .env.example  .flake8  .gitignore  .isort.cfg  DEVELOPMENT_GUIDE.md  Dockerfile  MIGRATION_SUMMARY.md  Makefile  README.md  architecture.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  env.example  machine-learning-features.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  system-design.md  todos.md
api/: asgi.py  celery.py  constants.py  decorators.py  exceptions.py  healthcheck.py  pagination.py  permissions.py  rbac_permissions.py  search_filters.py  settings.py  urls.py  utils.py  wsgi.py
api/config/: __init__.py  constants.py  error_messages.py  settings.py
api/settings/: __init__.py  common.py  dev.py  prod.py
api/utils/: __init__.py  cache.py  currency.py  email.py  file_utils.py  formatting.py  generators.py  http.py  math_utils.py  pagination.py  text_processing.py  validation.py
cart/: README.md  admin.py  models.py
cart/admin/: __init__.py  cart.py  cart_item.py  cart_item_admin.py
cart/controllers/: __init__.py  cart_controller.py  cart_item_controller.py
cart/management/commands/: generate_carts.py
cart/migrations/: 0001_initial.py
cart/models/: __init__.py  cart.py  cart_item.py
cart/schemas/: __init__.py  cart.py
cart/tests/: __init__.py  conftest.py
cart/tests/controllers/: __init__.py  test_cart_controller.py
cart/tests/factories/: __init__.py  cart_factory.py  cart_item_factory.py
core/: README.md  admin.py  api.py  models.py  tasks.py  tests.py
core/admin/: __init__.py  customer_feedback.py  user_admin.py
core/cache/: decorators.py  preload.py  settings.py  signals.py  versioning.py  warming.py
core/controllers/: __init__.py  address_controller.py  auth_controller.py  customer_controller.py  feedback_controller.py  user_controller.py
core/management/commands/: cache_ops.py  create_superuser.py  generate_all_data.py  generate_core_data.py  generate_customers.py  runserver_dev.py  setup_rbac.py  startapp_extended.py
core/migrations/: 0001_initial.py  0002_address_customer_customergroup_onetimepassword.py
core/models/: __init__.py  abstract_base.py  address.py  customer.py  customer_feedback.py  one_time_password.py  role.py  user.py
core/schemas/: __init__.py  address.py  address_schema.py  auth.py  customer.py  customer_schema.py  feedback.py  users.py
core/services/: __init__.py
core/services/email/: README.md  __init__.py  backends.py  service.py  templates.py  utils.py
core/templates/admin/: cache_monitor.html
core/tests/: __init__.py  conftest.py
core/tests/controllers/: __init__.py  test_user_controller.py
core/tests/factories/: __init__.py  address_factory.py  customer_factory.py  user_factory.py
docs/: README.md  architecture.md  system-design.md  todos.md  user_journeys.md
nginx/: Dockerfile  nginx.conf
orders/: README.md  admin.py  api.py  models.py  schemas.py  tests.py  urls.py
orders/admin/: __init__.py  discount.py  discount_admin.py  fulfillment.py  history.py  history_admin.py  note.py  note_admin.py  order.py  order_line_item.py  payment.py  payment_admin.py  refund.py  tax.py  tax_admin.py
orders/controllers/: __init__.py  fulfillment_controller.py  history_controller.py  order_controller.py  order_history_controller.py  order_note_controller.py  payment_controller.py  refund_controller.py  tax_controller.py
orders/management/commands/: generate_fulfillments.py  generate_orders.py  (+1 more)
orders/migrations/: 0001_initial.py
orders/models/: __init__.py  choices.py  discount.py  fulfillment.py  history.py  note.py  order.py  order_line_item.py  payment.py  refund.py  tax.py
orders/schemas/: __init__.py  fulfillment.py  fulfillment_schema.py  history.py  history_schema.py  note.py  order.py  order_history.py  order_history_schema.py  order_line_item.py  order_line_item_schema.py  order_note.py  order_note_schema.py  order_schema.py  payment.py  payment_schema.py  refund.py  refund_schema.py  tax.py  tax_schema.py
orders/tests/: __init__.py  conftest.py
payments/: admin.py  models.py
payments/admin/: __init__.py  payment_method.py  refund.py  transaction.py
payments/controllers/: __init__.py  payment.py  payment_controller.py
payments/models/: __init__.py  choices.py  payment_method.py  refund.py  transaction.py
payments/tests/: __init__.py  conftest.py
products/: README.md  admin.py  api.py  models.py  tests.py
products/admin/: __init__.py  product.py  product_admin.py  product_attribute.py  product_attribute_admin.py  product_bundle.py  product_category.py  product_review.py  product_tag.py  product_tag_admin.py  product_variant.py  product_variant_admin.py
products/controllers/: __init__.py  attribute_controller.py  bundle_controller.py  category_controller.py  collection_controller.py  inventory_controller.py  option_controller.py  price_controller.py  product_controller.py  product_option_controller.py  review_controller.py  tag_controller.py
products/migrations/: 0001_initial.py
products/models/: __init__.py  attribute.py  attribute_group.py  bundle.py  choices.py  inventory_history.py  price_history.py  product.py  product_category.py  product_image.py  product_option.py  product_review.py  product_tag.py  product_variant.py  related_product.py
products/schemas/: __init__.py  attribute.py  bundle.py  bundle_schema.py  category.py  category_schema.py  collection.py  collection_schema.py  inventory.py  inventory_schema.py  price.py  price_schema.py  product.py  product_option.py  product_option_schema.py  review.py  review_schema.py  tag.py
products/tests/: __init__.py  conftest.py
scripts/: README.md  check_data.sh  check_health.sh  code_quality.sh  db_setup.sh  deploy.sh  dev_setup.sh  generate_secret_key.sh  lint.sh  manage_cache.sh  reset_test_data.sh  runserver_hot.sh  setup.sh  setup_redis.sh  setup_scripts.sh  test_feature.sh  test_routes.sh
todos/: README.md  admin.py  api.py  models.py  schemas.py  tests.py
todos/migrations/: 0001_initial.py
(+24 files in other folders)
